# verilog-verification-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PLANS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-decisions.md  release-notes-v0.1.0-alpha.md
examples/broken/: adder4_buggy.v  alu4_buggy.v  counter4_buggy.v  mux2_buggy.v  rising_edge_detector_buggy.v  sequence_detector_1011_buggy.v  shift_register4_buggy.v
examples/correct/: adder4.v  alu4.v  counter4.v  mux2.v  rising_edge_detector.v  sequence_detector_1011.v  shift_register4.v
examples/specs/: adder4.json  alu4.json  counter4.json  mux2.json  rising_edge_detector.json  sequence_detector_1011.json  shift_register4.json
src/verilog_agent/: __init__.py  __main__.py  cli.py  diagnostics.py  errors.py  loop.py  model_client.py  models.py  prompts.py  report.py  simulator.py  spec.py  testbench.py  workspace.py
tests/: conftest.py
tests/e2e/: test_workflows.py
tests/integration/: test_icarus.py
tests/unit/: test_diagnostics.py  test_loop.py  test_model_client.py  test_report.py  test_simulator.py  test_spec.py  test_testbench.py  test_version.py  test_workspace.py
