[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "verilog-verification-agent"
version = "0.1.0"
description = "A bounded and auditable Verilog generation and repair verification harness"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Verilog Verification Agent contributors"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
]
llm = ["openai>=1.30"]

[project.scripts]
verilog-agent = "verilog_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --basetemp=.pytest-tmp"
testpaths = ["tests"]
markers = [
  "integration: requires local Icarus Verilog executables",
  "e2e: exercises the complete bounded verification workflow",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["verilog_agent"]
